5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4330/executions/1679_1880.log
== SUBMITION (2019-04-29 01:56:24) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("Digite um mes:"))

if (( m <= 0 ) or ( m > 12 )):
	print("numero de mes invalido")
elif ( m == 1);
	print("janeiro")
elif ( m == 2 ):
	print("fevereiro")
elif ( m == 3):
	print("marco")
elif ( m == 4):
	print("abril")
elif ( m == 5):
	print("maio")
elif ( m == 6):
	print("junho")
elif ( m == 7):
	print("julho")
elif ( m == 8):
	print("agosto")
elif ( m == 9):
	print("setembro")
elif ( m == 10):
	print("outubro")
elif ( m == 11):
	print("novembro")
elif ( m == 12):
	print("dezembro")





	
-- EXECUTION TIME:
0.202004
-- ERROR:
  File "/home/codebench/codes/1679/1880/main.py", line 6
    elif ( m == 1);
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 01:56:25) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("Digite um mes:"))

if (( m <= 0 ) or ( m > 12 )):
	print("numero de mes invalido")
elif ( m == 1);
	print("janeiro")
elif ( m == 2 ):
	print("fevereiro")
elif ( m == 3):
	print("marco")
elif ( m == 4):
	print("abril")
elif ( m == 5):
	print("maio")
elif ( m == 6):
	print("junho")
elif ( m == 7):
	print("julho")
elif ( m == 8):
	print("agosto")
elif ( m == 9):
	print("setembro")
elif ( m == 10):
	print("outubro")
elif ( m == 11):
	print("novembro")
elif ( m == 12):
	print("dezembro")





	
-- ERROR:
File "XXXX", line 6
    elif ( m == 1);
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 01:56:42) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("Digite um mes:"))

if (( m <= 0 ) or ( m > 12 )):
	print("numero de mes invalido")
elif ( m == 1):
	print("janeiro")
elif ( m == 2 ):
	print("fevereiro")
elif ( m == 3):
	print("marco")
elif ( m == 4):
	print("abril")
elif ( m == 5):
	print("maio")
elif ( m == 6):
	print("junho")
elif ( m == 7):
	print("julho")
elif ( m == 8):
	print("agosto")
elif ( m == 9):
	print("setembro")
elif ( m == 10):
	print("outubro")
elif ( m == 11):
	print("novembro")
elif ( m == 12):
	print("dezembro")





	
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 01:56:47) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("Digite um mes:"))

if (( m <= 0 ) or ( m > 12 )):
	print("numero de mes invalido")
elif ( m == 1):
	print("janeiro")
elif ( m == 2 ):
	print("fevereiro")
elif ( m == 3):
	print("marco")
elif ( m == 4):
	print("abril")
elif ( m == 5):
	print("maio")
elif ( m == 6):
	print("junho")
elif ( m == 7):
	print("julho")
elif ( m == 8):
	print("agosto")
elif ( m == 9):
	print("setembro")
elif ( m == 10):
	print("outubro")
elif ( m == 11):
	print("novembro")
elif ( m == 12):
	print("dezembro")





	
-- EXECUTION TIME:
0.180478
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
